--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,7 @@ body {
   padding: 0;
   min-height: 100%;
   max-width: 100%;
+  padding-bottom: 8rem;
 }
 
 *,
@@ -34,6 +35,109 @@ video {
   display: block;
 }
 
+/*Nav bar styles */
+
+.nav-bar {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  line-height: 1rem;
+  overflow: hidden;
+  background-color: #fff;
+  z-index: 100;
+  height: 6rem;
+}
+
+.logo,
+.nav-menu {
+  text-transform: uppercase;
+}
+
+.logo,
+.nav-item {
+  white-space: nowrap;
+}
+
+.nav-menu {
+  list-style: none;
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-evenly;
+  align-items: center;
+  padding: 0;
+  margin: 0;
+  line-height: 1.5rem;
+}
+
+.nav-item {
+  flex-grow: 1;
+  flex-shrink: 0;
+  flex-basis: 33.3%;
+  text-align: center;
+}
+
+.social-nav-item {
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: 10%;
+  padding: 0 0.2rem;
+}
+
+.logo a,
+.nav-menu a {
+  display: block;
+  text-decoration: none;
+  letter-spacing: 0.2rem;
+  padding: 0.8rem;
+  columns: black;
+}
+
+.logo a {
+  font-weight: 700;
+  font-size: 2rem;
+}
+
+.nav-menu a {
+  font-weight: 400;
+  letter-spacing: 0.1rem;
+  border-bottom: 1px solid white;
+  transition: all ease 0.1s;
+}
+
+.nav-menu a:hover {
+  border-bottom: 1px solid black;
+}
+
+/* Top Nav Only Styles */
+
+.top-nav {
+  background: none;
+  position: fixed;
+  top: 0;
+}
+
+/* modern browsers */
+
+@supports (position: sticky;) {
+  .top-nav {
+    position: -webkit-sticky; /* safary olny */
+    position: sticky;
+  }
+}
+
+.top-nav .logo a,
+.top-nav .nav-menu a {
+  color: white;
+}
+
+.top-nav .nav-menu a {
+  border-bottom: 1px solid rgba(0, 0, 0, 0);
+}
+
+.top-nav .nav-menu a:hover {
+  border-bottom: 1px solid white;
+}
 /* Hero styles */
 
 .hero-box {
@@ -46,6 +150,7 @@ video {
   align-items: start;
   height: 100%;
   width: 100%;
+  margin-top: -6rem;
 }
 
 .hero-image-box {
@@ -192,6 +297,10 @@ video {
   padding: 0 1rem 1rem 1rem;
 }
 
+.section-stop {
+  scroll-margin-top: 7rem;
+}
+
 /* Add Media Queries for Large Screens */
 
 @media (min-width: 600px) {
@@ -222,6 +331,23 @@ video {
     font-size: 1.1rem;
     line-height: 1.5rem;
   }
+  .nav-bar {
+    line-height: 1.5rem;
+    padding: 0 4rem;
+  }
+
+  .nav-menu {
+    padding: 0 1rem;
+  }
+
+  .nav-item {
+    flex: 1 1;
+    padding: 0 0.2rem;
+  }
+
+  .section-stop {
+    scroll-margin-top: 9rem;
+  }
 }
 
 @media (min-width: 920px) {
@@ -229,6 +355,11 @@ video {
     font-size: 6rem;
     line-height: 6rem;
   }
+
+  .hero-box {
+    margin-top: -8rem;
+  }
+
   .portfolio-container,
   .about-container {
     max-width: 1400px;
@@ -242,5 +373,25 @@ video {
   .about-text p {
     font-size: 1.5rem;
     line-height: 2rem;
+  }
+
+  .nav-bar {
+    justify-content: space-between;
+    padding: 2rem 5rem;
+    line-height: 1rem;
+    height: 8rem;
+  }
+
+  .nav-menu {
+    width: auto;
+    justify-self: end;
+  }
+
+  .nav-item {
+    padding: 0 0.5rem;
+  }
+
+  .top-nav {
+    width: 100%;
   }
 }
